--- a/Interpreter/Interpreter.fsproj
+++ b/Interpreter/Interpreter.fsproj
@@ -40,7 +40,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PortableLibrary1.fs" />
+    <Compile Include="Interpreter.fs" />
     <None Include="Script.fsx" />
   </ItemGroup>
   <PropertyGroup>
