--- a/Parser/Parser.fsproj
+++ b/Parser/Parser.fsproj
@@ -40,7 +40,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PortableLibrary1.fs" />
+    <Compile Include="Parser.fs" />
     <None Include="Script.fsx" />
   </ItemGroup>
   <PropertyGroup>
