Poprawka po merge'u - nawet sie juz kompiluje!

--- a/Interpreter/Interpreter.fsproj
+++ b/Interpreter/Interpreter.fsproj
@@ -37,8 +37,8 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <ItemGroup>
     <None Include="Script.fsx" />
-    <Compile Include="Interpreter.fs" />
     <Compile Include="Gensym.fs" />
+    <Compile Include="Functional.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
