Automatyzacja fsyacc dla vs11 i testy w xUnit

--- a/Parser/Parser.fsproj
+++ b/Parser/Parser.fsproj
@@ -35,12 +35,20 @@
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
+  <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\FSharp.PowerPack.targets" Condition=" Exists('$(MSBuildExtensionsPath32)\FSharp\1.0\FSharp.PowerPack.targets')" />
   <ItemGroup>
     <None Include="Lexer.fsl" />
     <None Include="Parser.fsy" />
+    <FsYacc Include="Parser.fsy">
+      <OtherFlags>--module Parser --open AbstractSyntax</OtherFlags>
+    </FsYacc>
+    <FsLex Include="Lexer.fsl">
+      <OtherFlags>--unicode</OtherFlags>
+    </FsLex>
     <Compile Include="Parser.fsi" />
     <Compile Include="Parser.fs" />
     <Compile Include="Lexer.fs" />
+    <Compile Include="ParserInterface.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.PowerPack, Version=4.0.0.1, Culture=neutral, PublicKeyToken=f536804aa0eb945b" />
