--- a/Interpreter/Interpreter.fsproj
+++ b/Interpreter/Interpreter.fsproj
@@ -39,6 +39,8 @@
     <None Include="Script.fsx" />
     <Compile Include="Gensym.fs" />
     <Compile Include="Functional.fs" />
+    <Compile Include="Graph.fsi" />
+    <Compile Include="Graph.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -53,6 +55,11 @@
     <ProjectReference Include="..\Common\Common.fsproj">
       <Name>Common</Name>
       <Project>{5d36a7f4-0da7-46fd-bc44-8deefd117082}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\Util\Util.fsproj">
+      <Name>Util</Name>
+      <Project>{5cb25ba2-6bb2-4fca-a03a-367833c87587}</Project>
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
