--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -46,11 +46,12 @@
     <None Include="Interpreter\withCount.felm" />
     <None Include="Interpreter\canonicalForm.felm" />
     <None Include="Interpreter\simpleFoldp.felm" />
+    <None Include="Interpreter\letBodyFunApp.felm" />
     <Compile Include="Interpreter\FunctionalTest.fs" />
     <Compile Include="Interpreter\FunctionalXunit.fs" />
     <Compile Include="Interpreter\GraphXunit.fs" />
     <Compile Include="Interpreter\SignalXunit.fs" />
-    <None Include="Interpreter\letBodyFunApp.felm" />
+    <Compile Include="Interpreter\SigNormalizeXunit.fs" />
     <None Include="Parser\test1.felm" />
     <None Include="Parser\test2.felm" />
     <None Include="Parser\test3.felm" />
